force-app/main/default/objects/TataCTI__Permission__c/TataCTI__Permission__c.object-meta.xml
<CustomObject>
    <label>Permission</label>
    <nameField>
        <label>Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>