force-app/main/default/objects/TataCTI__Permission__c/fields/TataCTI__AutoCreateCheckBox__c.field-meta.xml
<CustomField>
    <fullName>TataCTI__AutoCreateCheckBox__c</fullName>
    <defaultValue>(&apos;false&apos;)</defaultValue>
    <label>AutoCreateCheckBox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>