force-app/main/default/objects/TataCTI__Permission__c/fields/TataCTI__AutoPopUpMinimizeCTI__c.field-meta.xml
<CustomField>
    <fullName>TataCTI__AutoPopUpMinimizeCTI__c</fullName>
    <defaultValue>(&apos;false&apos;)</defaultValue>
    <label>AutoPopUpMinimizeCTI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>