force-app/main/default/objects/TataCTI__Permission__c/fields/TataCTI__size__c.field-meta.xml
<CustomField>
    <fullName>TataCTI__size__c</fullName>
    <label>size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>